--- a/config.yaml
+++ b/config.yaml
@@ -1,11 +1,11 @@
 path:
-    install_dir:   'e:\Workspace\TCS_oracle\install\2022ww29-30\' # directory where we put install files
+    install_dir:   'e:\Workspace\TCS_oracle\install\2022ww33-34_kpw' # directory where we put install files
     obj_root_dir:   # directory from where we get oracle objects if empty, we think that it is 3 steps up install_dir
 mode:
     full_mode_props:            
                 enabled:  False # True/False in this mode we delete all install files in install dir and make install for all oracle objects if False                        
     patch_mode_props:            
                 enabled:  True # In patch mode in this mode we create/rewrite to the end of existing install files only for objects that have been changed after some commit 
-                commit_id: 0c9907a1422cfc6182df1872e8cfa9cd276c0297  #Id of commit after that we look for changed objects including 
+                commit_id: cfb767d287ae2c1d0f88cf2345168971a002c607  #Id of commit after that we look for changed objects including 
                 add_to_end: True  #True/ False in this mode we are write info to the end of install if it exists 
    #default mode full = False commit_id = last commit add_to_end = True  
